2.4.4/source/operation/ox11.md
# oxEleven

## Create tomcat user and group:
```
# groupadd -r tomcat && useradd -r -g tomcat tomcat
```
## Add SoftHSM2 ppa and install:
Add ppa of softhsm2:
```
# echo "deb http://ppa.launchpad.net/pkg-opendnssec/ppa/ubuntu trusty main" >> /etc/apt/sources.list.d/opendnssec.list
# echo "deb-src http://ppa.launchpad.net/pkg-opendnssec/ppa/ubuntu trusty main" >> /etc/apt/sources.list.d/opendnssec.list
# apt-key adv --keyserver keyserver.ubuntu.com --recv-keys 26535DB3
# apt-get update
# apt-get install -y softhsm2
```
## Tomcat prerequisite soptwares:
Prerequisites:
```
#apt-get install -y openjdk-7-jre-headless unzip
```

## Install Tomcat:
Install:
```
# wget -q http://archive.apache.org/dist/tomcat/tomcat-7/v7.0.65/bin/apache-tomcat-7.0.65.tar.gz -O /tmp/tomcat.tar.gz
# tar -xzf /tmp/tomcat.tar.gz -C /opt
# mv /opt/apache-tomcat-7.0.65 /opt/tomcat
# rm -f /tmp/tomcat.tar.gz
```

## Install oxEleven in tomcat:
```
# wget -q https://ox.gluu.org/maven/org/gluu/oxeleven-server/3.0.0-SNAPSHOT/oxeleven-server-3.0.0-SNAPSHOT.war -O /tmp/oxeleven.war
#unzip -qq /tmp/oxeleven.war -d /opt/tomcat/webapps/oxeleven \
#rm -f /tmp/oxeleven.war
```

## Directory for tokens:
Make token directory:
```
# mkdir -p  /var/lib/softhsm/tokens
```

## Make config file of oxEleven:
Make a file named 'oxeleven-config.json' in /opt/tomcat/conf and put this content:
```
{
    "pkcs11Config": {
        "name": "SoftHSM",
        "library": "/usr/lib/softhsm/libsofthsm2.so",
        "slot": "SLOT",
        "showInfo": "true"
    },
    "pkcs11Pin": "PIN",
    "dnName": "CN=oxAuth CA Certificate"
}
```
## Make slot in softhms2:
You can choose any string for 'PIN' in softhms2
```
# PIN=1234
# softhsm2-util --init-token --slot 0 --label "oxtoken" --so-pin $PIN --pin $PIN
```

Get slot id:
```
# SLOTID=$(softhsm2-util --show-slots | head -n 2 | tail -n 1 | sed 's/Slot //g')
```

Render use 'SLOTID' and 'PIN':
```
# cat /opt/tomcat/conf/oxeleven-config.json | sed -e "s/\PIN/$PIN/" -e "s/\SLOT/$SLOTID/" - > /opt/tomcat/conf/oxeleven-config.json
```

## Start tomcat:
```
# CATALINA_PID=/var/run/tomcat.pid
# /opt/tomcat/bin/catalina.sh run
```

